tests/ok/vector-as-slice-known-len.ari
fn main() -> i64 {
  var values: Vec[i64] = [4, 5];
  let view = values.as_slice();
  return view.len();
}
