tests/errors/vector-api-freeze.ari
fn main() -> i64 {
  var values: Vec[i64] = [];
  values.map(1);
  return 0;
}
